--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="auto spare, car parts, contact, Dan Auto Spare">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.PNG" rel="icon">
+  <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
