--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>404 - Dan Auto Spare</title>
-  <meta name="description" content="Page not found - Dan Auto Spare">
+  <title>404 - Dani's Auto World</title>
+  <meta name="description" content="Page not found - Dani's Auto World">
   <meta name="keywords" content="auto spare, car parts, 404, not found, Dan Auto Spare">
 
   <!-- Favicons -->
@@ -34,9 +34,9 @@
     <div class="container-fluid container-xl position-relative">
 
       <div class="top-row d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-end">
+        <a href="home.html" class="logo d-flex align-items-end">
           <!-- <img src="assets/img/logo-auto.png" alt=""> -->
-          <h1 class="sitename">Dan Auto Spare</h1><span class="text-primary">.</span>
+          <h1 class="sitename">Dani's Auto World</h1><span class="text-primary">.</span>
         </a>
 
         <div class="d-flex align-items-center">
@@ -58,11 +58,11 @@
       <div class="container d-flex justify-content-center position-relative">
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="categories.html">Categories</a></li>
-            <li><a href="products.html">All Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="abaut.html">About Us</a></li>
+            <li><a href="categoly.html">Categories</a></li>
+            <li><a href="prodacts.html">All Products</a></li>
+            <li><a href="contuct.html">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -98,7 +98,7 @@
           </div>
 
           <div class="error-action" data-aos="fade-up" data-aos-delay="700">
-            <a href="index.html" class="btn btn-primary">Back to Home</a>
+            <a href="home.html" class="btn btn-primary">Back to Home</a>
           </div>
         </div>
       </div>
@@ -111,14 +111,14 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href="home.html" class="logo d-flex align-items-center">
             <span class="sitename">Dan Auto Spare</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>123 Motor Way</p>
-            <p>Lagos, Nigeria</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+234 800 123 4567</span></p>
-            <p><strong>Email:</strong> <span>info@danautospare.com</span></p>
+            <p>Kyengera Massaka Road</p>
+            <p>Kampala, Uganda</p>
+            <p class="mt-3"><strong>Phone:</strong> <span> *** **** *** </span></p>
+            <p><strong>Email:</strong> <span>info@dansautoworld.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href="#"><i class="bi bi-twitter-x"></i></a>
@@ -131,21 +131,21 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="categories.html">Categories</a></li>
-            <li><a href="products.html">All Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="abaut.html">About Us</a></li>
+            <li><a href="categoly.html">Categories</a></li>
+            <li><a href="prodacts.html">All Products</a></li>
+            <li><a href="contuct.html">Contact</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Shop By</h4>
           <ul>
-            <li><a href="products.html?cat=engine">Engine Parts</a></li>
-            <li><a href="products.html?cat=brake">Brakes</a></li>
-            <li><a href="products.html?cat=suspension">Suspension</a></li>
-            <li><a href="products.html?cat=electrical">Electrical</a></li>
-            <li><a href="products.html?cat=body">Body Parts</a></li>
+            <li><a href="prodacts.html?cat=engine">Engine Parts</a></li>
+            <li><a href="prodacts.html?cat=brake">Brakes</a></li>
+            <li><a href="prodacts.html?cat=suspension">Suspension</a></li>
+            <li><a href="prodacts.html?cat=electrical">Electrical</a></li>
+            <li><a href="prodacts.html?cat=body">Body Parts</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-3 footer-links">
@@ -171,9 +171,9 @@
       </div>
     </div>
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Dan Auto Spare</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Dani's Auto World</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        Designed by <a href="#">Dan Auto Spare Team</a>
+        Designed by <a href="#">Dani's Auto World Team</a>
       </div>
     </div>
   </footer>
